--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,43 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My website - Google Search</title>
+  </head>
+  <body>
+    <h1>My website</h1>
+    <p>My first website</p>
+    <ol>
+      <li>item-1</li>
+      <li>item-2</li>
+      <li>item-3</li>
+      <li>item-4</li>
+      <table style="width: 500px" border="1px">
+        <thead>
+          <tr>
+            <th>first name</th>
+            <th>last name</th>
+            <th>email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>john</td>
+            <td>john</td>
+            <td>john@gmail.com</td>
+          </tr>
+          <tr>
+            <td>kabir</td>
+            <td>kabir</td>
+            <td>kabir@gmail.com</td>
+          </tr>
+          <tr>
+            <td>sun</td>
+            <td>sun</td>
+            <td>sun@gmail.com</td>
+          </tr>
+        </tbody>
+      </table>
+    </ol>
+    <a href="https://www.google.com/" target="_blank">google</a>
+  </body>
+</html>
