--- a/form/index.html
+++ b/form/index.html
@@ -1,1 +1,107 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Form</title>
+    <style>
+      .container {
+        position: relative;
+        width: 100%;
+        height: 680px;
+        background-color: blueviolet;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      .mainBox {
+        position: absolute;
+        height: 500px;
+        width: 400px;
+        top: 100px;
+        left: 550px;
+        background-color: white;
+      }
+      .mainBox p {
+        text-align: center;
+        line-height: 2px;
+      }
+      .mainBox .account {
+        color: white;
+      }
+      .mainBox span {
+        color: rgb(60, 239, 179);
+      }
+      .heading {
+        color: black;
+        line-height: 18px;
+        text-align: center;
+      }
+      .input {
+        padding: 20px;
+      }
+      .input input {
+        box-sizing: border-box;
+        width: 100%;
+      }
+      .input .btn {
+        background-color: rgb(60, 239, 179);
+        border: none;
+        border-radius: 5px;
+        padding: 5px;
+      }
+      .input p {
+        text-align: center;
+        line-height: 10px;
+      }
+      .input .terms_and_condition {
+        color: rgb(166, 97, 231);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="mainBox">
+        <div class="heading">
+          <h1>Sign Up</h1>
+          <p>It's free and only takes a minute</p>
+        </div>
+        <div class="input">
+          <div>
+            <label for="first name">First Name</label><br />
+            <input type="text" id="first name" />
+          </div>
+          <br />
+          <div>
+            <label for="last name">Last Name</label><br />
+            <input type="text" id="last name" />
+          </div>
+          <br />
+          <div>
+            <label for="email">Email</label><br />
+            <input type="email" id="email" />
+          </div>
+          <br />
+          <div>
+            <label for="password">Password</label><br />
+            <input type="password" id="password" />
+          </div>
+          <br />
+          <div>
+            <label for="confirm password">Confirm Password</label><br />
+            <input type="password" id="confirm password" />
+          </div>
+          <br />
+          <div>
+            <input class="btn" type="submit" value="Sign Up" />
+          </div>
+          <div>
+            <p>By Clicking the Sign Up button, you agree to our</p>
+            <p class="terms_and_condition">
+              Terms & Conditions and Privecy Policy
+            </p>
+          </div>
+        </div>
+        <p class="account">Already Have an account? <span>Login Here</span></p>
+      </div>
+    </div>
+  </body>
+</html>
