--- a/e-com website/shop.html
+++ b/e-com website/shop.html
@@ -15,8 +15,8 @@
       <a href="#"><img src="img/logo.png" class="logo" alt="" /></a>
       <div>
         <ul id="navbar">
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="shop.html">Shop</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a class="active" href="shop.html">Shop</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -33,46 +33,16 @@
       </div>
     </section>
 
-    <section id="hero">
-      <h4>Trade-in-offer</h4>
-      <h2>Super value deals</h2>
-      <h1>On all products</h1>
+    <section id="page-header" class="shop-header">
+      <h2>#stayhome</h2>
       <p>Save more with coupons & up to 70% off!</p>
-      <button class="btn">Shop Now</button>
-    </section>
-
-    <section id="feature" class="section-p1">
-      <div class="fe-box">
-        <i class="fa-solid fa-truck-fast fa-6x"></i>
-        <h6>Free shipping</h6>
-      </div>
-      <div class="fe-box">
-        <i class="fa-brands fa-first-order fa-6x"></i>
-        <h6>Online Order</h6>
-      </div>
-      <div class="fe-box">
-        <i class="fa-solid fa-piggy-bank fa-6x"></i>
-        <h6>Save Money</h6>
-      </div>
-      <div class="fe-box">
-        <i class="fa-solid fa-rectangle-ad fa-6x"></i>
-        <h6>Promotion</h6>
-      </div>
-      <div class="fe-box">
-        <i class="fa-brands fa-sellsy fa-6x"></i>
-        <h6>Happy Sell</h6>
-      </div>
-      <div class="fe-box">
-        <i class="fa-solid fa-headset fa-6x"></i>
-        <h6>24/7 Support</h6>
-      </div>
     </section>
 
     <section id="product1" class="section-p1">
       <h2>Featured products</h2>
       <p>Summer collection new modern products</p>
       <div class="product-container">
-        <div class="product">
+        <div class="product" onclick="window.location.href='product.html';">
           <img src="img/products/p1.png" alt="" />
           <div class="sub-product">
             <div class="description">
@@ -216,195 +186,158 @@
             <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
           </div>
         </div>
-        
-    </section>
+          <div class="product">
+            <img src="img/products/p1.png" alt="" />
+            <div class="sub-product">
+              <div class="description">
+                <span>easy</span>
+                <h5>Flowered Beach T-shirt</h5>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                <h4>400 Tk</h4>
+              </div>
+              <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+          </div>
+          <div class="product">
+            <img src="img/products/p7.png" alt="" />
+            <div class="sub-product">
+              <div class="description">
+                <span>adidas</span>
+                <h5>Flowered Beach T-shirt</h5>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                <h4>750 Tk</h4>
+              </div>
+              <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+          </div>
+          <div class="product">
+            <img src="img/products/p5.png" alt="" />
+            <div class="sub-product">
+              <div class="description">
+                <span>yellow</span>
+                <h5>Flowered Beach T-shirt</h5>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                <h4>450 Tk</h4>
+              </div>
+              <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+          </div>
+          <div class="product">
+            <img src="img/products/p2.png" alt="" />
+            <div class="sub-product">
+              <div class="description">
+                <span>fabrilife</span>
+                <h5>Flowered Beach T-shirt</h5>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                <h4>400 Tk</h4>
+              </div>
+              <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+          </div>
+          <div class="product">
+            <img src="img/products/p8.png" alt="" />
+            <div class="sub-product">
+              <div class="description">
+                <span>easy</span>
+                <h5>Flowered Beach T-shirt</h5>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                <h4>1400 Tk</h4>
+              </div>
+              <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+          </div>
+          <div class="product">
+            <img src="img/products/p3.png" alt="" />
+            <div class="sub-product">
+              <div class="description">
+                <span>richman</span>
+                <h5>Flowered Beach T-shirt</h5>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                <h4>800 Tk</h4>
+              </div>
+              <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+          </div>
+          <div class="product">
+            <img src="img/products/p6.png" alt="" />
+            <div class="sub-product">
+              <div class="description">
+                <span>fabrilife</span>
+                <h5>Flowered Beach T-shirt</h5>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                <h4>750 Tk</h4>
+              </div>
+              <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+          </div>
+          <div class="product">
+            <img src="img/products/p5.png" alt="" />
+            <div class="sub-product">
+              <div class="description">
+                <span>infinity</span>
+                <h5>Flowered Beach T-shirt</h5>
+                <div class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                <h4>600 Tk</h4>
+              </div>
+              <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+          </div>
+        </div>
+      </section>
 
-    <section id="banner" class="section-m1">
-      <h4>Repair Services</h4>
-      <h2>Up to <span>70% 0ff</span> for all T-shirts and Accessories</h2>
-      <button class="btn">Explore More</button>
-    </section>
-
-    <section id="product1" class="section-p1">
-      <h2>New Arrivals</h2>
-      <p>Summer collection new modern products</p>
-      <div class="product-container">
-        <div class="product">
-          <img src="img/products/p1.png" alt="" />
-          <div class="sub-product">
-            <div class="description">
-              <span>easy</span>
-              <h5>Flowered Beach T-shirt</h5>
-              <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-              </div>
-              <h4>400 Tk</h4>
-            </div>
-            <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-          </div>
-        </div>
-        <div class="product">
-          <img src="img/products/p7.png" alt="" />
-          <div class="sub-product">
-            <div class="description">
-              <span>adidas</span>
-              <h5>Flowered Beach T-shirt</h5>
-              <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-              </div>
-              <h4>750 Tk</h4>
-            </div>
-            <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-          </div>
-        </div>
-        <div class="product">
-          <img src="img/products/p5.png" alt="" />
-          <div class="sub-product">
-            <div class="description">
-              <span>yellow</span>
-              <h5>Flowered Beach T-shirt</h5>
-              <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-              </div>
-              <h4>450 Tk</h4>
-            </div>
-            <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-          </div>
-        </div>
-        <div class="product">
-          <img src="img/products/p2.png" alt="" />
-          <div class="sub-product">
-            <div class="description">
-              <span>fabrilife</span>
-              <h5>Flowered Beach T-shirt</h5>
-              <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-              </div>
-              <h4>400 Tk</h4>
-            </div>
-            <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-          </div>
-        </div>
-        <div class="product">
-          <img src="img/products/p8.png" alt="" />
-          <div class="sub-product">
-            <div class="description">
-              <span>easy</span>
-              <h5>Flowered Beach T-shirt</h5>
-              <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-              </div>
-              <h4>1400 Tk</h4>
-            </div>
-            <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-          </div>
-        </div>
-        <div class="product">
-          <img src="img/products/p3.png" alt="" />
-          <div class="sub-product">
-            <div class="description">
-              <span>richman</span>
-              <h5>Flowered Beach T-shirt</h5>
-              <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-              </div>
-              <h4>800 Tk</h4>
-            </div>
-            <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-          </div>
-        </div>
-        <div class="product">
-          <img src="img/products/p6.png" alt="" />
-          <div class="sub-product">
-            <div class="description">
-              <span>fabrilife</span>
-              <h5>Flowered Beach T-shirt</h5>
-              <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-              </div>
-              <h4>750 Tk</h4>
-            </div>
-            <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-          </div>
-        </div>
-        <div class="product">
-          <img src="img/products/p5.png" alt="" />
-          <div class="sub-product">
-            <div class="description">
-              <span>infinity</span>
-              <h5>Flowered Beach T-shirt</h5>
-              <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-              </div>
-              <h4>600 Tk</h4>
-            </div>
-            <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
-          </div>
-        </div>
-        
-    </section>
-
-    <section id="small-banner" class="section-p1">
-      <div class="banner-box">
-        <h3>crazy deals</h3>
-        <h2>buy 1 get 1 free</h2>
-        <span>The best classic dress is on sell at jubaeid</span>
-        <button class="btn">Learn More</button>
-      </div>
-      <div class="banner-box banner-box2">
-        <h3>spring/summer</h3>
-        <h2>upcomming season</h2>
-        <span>The best classic dress is on sell at jubaeid</span>
-        <button class="btn">Collection</button>
-      </div>
-    </section>
-
-    <section id="small-banner" class="section-p1"> 
-      <div class="box3">
-        <h2>SEASONAL SALE</h2>
-        <h3>Winter Collection 50% off</h3>
-      </div>
-      <div class="box3 box4">
-        <h2>T-SHIRTS</h2>
-        <h3>New Trendy Prints</h3>
-      </div>
-      <div class="box3 box5">
-        <h2>NEW FOOTWEAR COLLECTION</h2>
-        <h3>Winter Collection 2025</h3>
-      </div>
-    </section>
+      <section id="pagination" class="section-p1">
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+      </section>
 
     <section id="news-letter" class="section-p1 section-m1">
       <div class="news-letter-text">
